--- a/report/top.tex
+++ b/report/top.tex
@@ -579,7 +579,7 @@
 % stfloats package.
 
 
-\section{Backgroud}
+\section{Background}
 \input{background.tex}
 \section{Related Work}
 \input{relatedWork.tex}
@@ -668,6 +668,17 @@ Appendix two text goes here.
 \hskip 1em plus 0.5em minus 0.4em\relax Assignment text
 
 \bibitem{reference:spec} SPEC, "SPEC CPU2000 Benchmark Descriptions", 2007. http://www.spec.org.
+
+\bibitem{reference:intel} Intel Corporation, "Microprocessor Quick Reference Guide", http://www.intel.com/pressroom/kits/quickreffam.htm (Retrieved 3.4.2014)
+\hskip 1em plus 0.5em minus 0.4em\relax Intel8088
+
+
+\bibitem{reference:inteli7} HardOCP, "Synthethic Benchmarks - Intel i7-3960x", http://hardocp.com/article/2011/11/14/intel\_core\_i73960x\_sandy\_bridge\_e\_processor\_review/4 (Retrieved 3.4.2014)
+\hskip 1em plus 0.5em minus 0.4em\relax inteli7
+
+\bibitem{reference:8086} M. Sunil \emph{Microprocessor 8086 : Architecture, Programming and Interfacing}, page 654
+\hskip 1em plus 0.5em minus 0.4em\relax 8086 description
+
 
 \end{thebibliography}
 
