--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -1,4 +1,4 @@
-The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the memory location. The performance of this prefetcher is very limtited since it does not have any form of heuristic. An improvement of this prefetcher is called tagged sequential prefetcher, which divides the sequences into blocks.
+The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the next memory location. The performance of this prefetcher is very limtited since it does not have any form of heuristic. An improvement of this prefetcher is called tagged sequential prefetcher, which divides the sequences into blocks.
 
 What these have in common, is that the prefetching is not based on statistics. They are instead deterministic fetches where a fixed group or single memory adress is fetched. To improve the performance, prefetching based on statistics were developed. These prefetchers will predict the next fetch statistically.   
 
