--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,5 +1,5 @@
-\IEEEPARstart{O}{ne} of the core problems in computer performance development is the growing processor - memory gap. While the processor speed has been increasing rapidly through the past 30 years, the memory access speed has been lagging behind. The major issue with memory access speed is related to the principle of locality. In order to have a lot of memory, you have to space it out, and traversing this space takes time. The prefetcher is an attempt to minimize the gap by fetching memory from RAM to cache, memory on the chip, but because of space requirements and limits to complexity, the prefetchers are still limited and subject to a lot of different algorithms and optimizations.
+\IEEEPARstart{O}{ne} of the core problems in computer performance development is the growing processor - memory gap illustrated in table \ref{graph:cpugap}. While the processor speed has been increasing rapidly through the past 30 years, the memory access speed has been lagging behind. The major issue with memory access speed is related to the principle of locality. In order to have a lot of memory, you have to space it out, and traversing this space takes time. The prefetcher is an attempt to minimize the gap by fetching memory from RAM to the cache, that is the memory on the chip. Because of size requirements and limits to complexity, the prefetchers are still limited and subject to a lot of different algorithms and optimizations.
 
-The goal of this project is to make a prefetcher that increases runtime performance by determining what memory block will be accessed before it's needed. Based on the DCPT algorithm described in \cite{reference:jahre}, an attempt to increase performance on a collection of benchmarks running on a modified M5 hardware simulator. 
+The goal of this project is to make a prefetcher that increases runtime performance by determining which memory block will be accessed before it's needed. Based on the DCPT algorithm described in \cite{reference:jahre}, the prefetcher attempts to increase performance on a collection of benchmarks running on a modified M5 hardware simulator. 
 
-
+The prefetcher detailed in this report is a complex software algorithm with some rigid rules for what will be prefetched. A prefetcher can in theory be as complex or simple as one wants, but is in practice very limited by hardware. The results from this report will therefore only be valid from a theoretical perspective. The simulator that is used does not impose limits on the prefetcher the same way a hardware implementation would.
