related works on the way

--- a/report/relatedWork.tex
+++ b/report/relatedWork.tex
@@ -1,7 +1,8 @@
-The most basic prefetcher is called a sequential prefetcher. When a CPU is requesting a memory adress, the prefetcher will also fetch the memory location. The performance of this prefetcher is very limtited since it does not have any form of heuristic. An improvement of this prefetcher is called tagged sequential prefetcher, which divides the sequences into blocks.
+The most basic prefetcher is the sequential prefetcher. This works in the way that when a CPU is requesting a memory adress, the prefetcher will also fetch the next neighbouring memory location. The performance of this prefetcher is very limtited since it does not have any form of heuristics. An improvement of this prefetcher is the tagged sequential prefetcher, which adds an extra tag to the cache block which is set when the block if fetched into the cache. The prefetcher will then issue a prefetch based on if there is a chache hit on a block where this tag is set.
 
-What these have in common, is that the prefetching is not based on statistics. They are instead deterministic fetches where a fixed group or single memory adress is fetched. To improve the performance, prefetching based on statistics were developed. These prefetchers will predict the next fetch statistically.   
+What these have in common is that the prefetching is deterministic fetches where a fixed group or a single memory address is fetched. To improve the performance, prefetching techniques based on statistics were developed. These prefetchers will predict the next fetch statistically rather than through a deterministic manner.   
 
-A Reference Prediction Tables RPT is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. A RPT contains a table with addresses of the missed fetches as index. Another variant of this is PC/DC prefetching. 
+A Reference Prediction Table (RPT) is a prefetcher that is based on statistics. This type of prefetcher was first proposed in 1995 by Chan and Baer. The basic functionality of this technique is that when a load instruction causes a miss, the address of the instruction is stored in a large table. When the same load instruction causes a miss again the address of this new miss is compared to the previous miss and the difference between the two addresses is stored as a delta value. This value is then used to calculate which block(s) to prefetch the next time that load instruction executed. 
+A relative to this design was proposed in 2004 by Nesbit and Smith where a global history buffer (GHB) is used to store cache hits and misses of prefetch-tagged blocks. An index table is then storing the address of the load instruction with a pointer into the GHB for the last miss issued by that instruction. Each GHB entry then has a similar pointer to the next miss issued by the same instruction. Using this history of instruction misses a delta value for the instruction can be calculated and stored within  a separate delta table.
 
-An another type of prefetching is called Delta Correlating Prediction, as described in \cite{reference:jahre}. Their purpose was to combine the delta correlating design of PC/DC and the storage efficiency of RPT. Compared to RC/DC, the DCPT reduces the complexity of the prefetching. This is done by recomputing the delta.
+Another type of prefetching is called Delta Correlating Prediction, as described in \cite{reference:jahre}. Their purpose was to combine the delta correlating design of PC/DC and the storage efficiency of RPT. Compared to PC/DC, the DCPT reduces the complexity of the prefetching . This is done by recomputing the delta.
