--- a/report/top.tex
+++ b/report/top.tex
@@ -579,7 +579,7 @@
 % stfloats package.
 
 
-\section{Backgroud}
+\section{Background}
 \input{background.tex}
 \section{Related Work}
 \input{relatedWork.tex}
