added bullshit on ignoring pc address on prefetcher description

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,4 +1,4 @@
-\IEEEPARstart{O}{ne} of the core problems in computer performance development is the growing processor - memory gap illustrated in figure \ref{graph:cpugap}. While the processor speed has been increasing rapidly through the past 30 years, the memory access speed has been lagging behind. The major issue with memory access speed is related to the principle of locality. In order to have a lot of memory, you have to space it out, and traversing this space takes time. The prefetcher is an attempt to minimize the gap by fetching memory from RAM to the cache, that is the memory on the chip. Because of size requirements and limits to complexity, the prefetchers are still limited and subject to a lot of different algorithms and optimizations.
+\IEEEPARstart{O}{ne} of the core problems in computer performance development is the growing processor - memory gap illustrated in figure \ref{graph:cpugap}. While the processor speed has been increasing rapidly through the past 30 years, the memory access speed has been lagging behind. The major issue with memory access speed is related to the principle of locality. In order to have a lot of memory, you have to space it out, and traversing this space takes time. The prefetcher is an attempt to minimize the gap by fetching memory from RAM to the cache, that is the memory on the chip, before it is needed by the processor. Because of size requirements and limits to complexity, the prefetchers are still limited and subject to a wide array of different algorithms and optimizations.
 
 The goal of this project is to make a prefetcher that increases runtime performance by determining which memory block will be accessed before it's needed. Based on the DCPT algorithm described in \cite{reference:jahre}, the prefetcher attempts to increase performance on a collection of benchmarks running on a modified M5 hardware simulator. 
 
