--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,1 +1,3 @@
-This paper describes a pattern-recognizing prefetcher based on the DCPT prefetching heuristic by Marius Grannae, Magnus Jahre and Lasse Natvig \cite{reference:jahre}. The prefetcher attempts to achieve high accuracy through strict rules for the next prefetch based on previously recognized fetch sequences. This is comparable to using the principle of locality, where the nearest addresses are cached. The prefetcher detailed in this report employs stricter rules for which addresses that are fetched, and attempts to log all occurring prefetch sequences in a vector-based array.
+This paper describes a pattern-recognizing prefetcher based on the DCPT prefetching heuristic by Marius Grannae, Magnus Jahre and Lasse Natvig \cite{reference:jahre}. The prefetcher attempts to achieve high accuracy through strict rules for the next prefetch based on previously recognized fetch sequences. The algorithm is comparable to using a prefetcher based on the principle of locality Stricter , though stricter rules are employed in this report's prefetcher. All fetched addresses are attempted logged in a vector-based array. The goal is to base prefetching on the most frequent occurring prefetch sequences. 
+
+The results yielded worse performance gains than anticipated. Some of the reasons for this are the strict limits imposed on the prefetches and the size of the accessed memory space. The prefetcher might have done better in a smaller environment.
