--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -13,7 +13,7 @@ A general trend through all the tests is that the accuracy and IPC of our implem
 In addition to rather poor performance, the algorithm is very complex and utilizes a great deal of dynamic memory allocation, which would make a good, compact hardware implementation hard to implement. Searching algorithms in the combination pool would be hard to do fast, and a hashing function should be considered.
 
 
-Further development of the algorithm should be directed towards reimplementing the program counter into the algorithm, while still keeping the scoring system. This could end up improving the DCPT algorithm, while avoiding the biggest drawbacks of the current implementation. A more dynamic and adaptive approach to the scoring system should also be able to boost the performance through changing access patterns. This is heavily adapted 
+Further development of the algorithm should be directed towards reimplementing the program counter into the algorithm, while still keeping the scoring system. This could end up improving the DCPT algorithm, while avoiding the biggest drawbacks of the current implementation. A more dynamic and adaptive approach to the scoring system should also be able to boost the performance through changing access patterns. 
 
 
 %  Why no speed increase
