--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,4 @@
-This paper describes a pattern-recognizing prefetcher based on the DCPT prefetching heuristic by Marius Grannae, Magnus Jahre and Lasse Natvig \cite{reference:jahre}. The prefetcher attempts to achieve high accuracy through strict rules for the next prefetch based on previously recognized fetch sequences. The algorithm is comparable to using a prefetcher based on the principle of locality Stricter , though stricter rules are employed in this report's prefetcher. All fetched addresses are attempted logged in a vector-based array. The goal is to base prefetching on the most frequent occurring prefetch sequences. 
+This paper investigates a pattern-recognizing prefetcher based on the DCPT prefetching heuristic by Marius Grannae, Magnus Jahre and Lasse Natvig \cite{reference:jahre}. The prefetcher attempts to achieve high accuracy through strict rules for the next prefetch based on previously recognized fetch sequences.
+The algorithm is evaluated by submitting it to a series of selected SPEC CPU2000 benchmarks using a modified version of the M5 open source hardware simulator system.
 
-The results yielded worse performance gains than anticipated. Some of the reasons for this are the strict limits imposed on the prefetches and the size of the accessed memory space. The prefetcher might have done better in a smaller environment.
+The algorithm yielded worse performance gains than initially expected, with an overall speedup of 1\%. Two major reasons for this are the strict limits imposed on the storage size available to the prefetcher and the total size of the memory address space. Comparing this algorithm with the original DCPT it is clear that the proposed changes are not satisfactory.
